# reversing-mono4k

./: README.md
firmware/: fpga.config  openocd.cfg  port_config.txt  port_config_stepping.txt  port_config_tft.txt  print_ports_config.py
firmware/fpga.out/: fpga.bas  fpga.bmk  fpga.fuse  fpga.rbf  fpga.svf
part0/: README.md
part1/: README.md
part2/: README.md
part3/: README.md
part4/: README.md
src/: .gitignore  Cargo.toml  Makefile  jlink.cfg  lv_conf.h  memory.x  openocd-noload.gdb  openocd.gdb
src/.cargo/: config.toml
src/src/: consts.rs  init.rs  main.rs
src/src/drivers/: clock.rs  display.rs  ext_flash.rs  hio.rs  init.rs  lcd.rs  mod.rs  stepper.rs  ticks.rs  touch_screen.rs
src/src/ui/: mod.rs  move_z.rs
writeup/part1/: README.md
writeup/part10/: README.md
writeup/part2/: README.md
writeup/part3/: README.md
writeup/part4/: README.md
writeup/part5/: README.md
writeup/part6/: README.md  swap_nimbles.py
writeup/part7/: README.md
writeup/part8/: README.md
writeup/part9/: README.md
