[package]
authors = ["Nicolas Viennot <nicolas@viennot.biz>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.3"
cortex-m = "0.7"
cortex-m-rt = "0.7"
#cortex-m-semihosting = "0.3"
#panic-semihosting = "0.5"
#panic-halt = "0.2"
spi-memory = "0.2"
stm32-fmc = "0.2"
display-interface = "0.4"
embedded-graphics = "0.7"
embedded-graphics-core = "0.3"
arrayvec = {version = "0.7", default-features = false }
ramp-maker = {version = "0.2", features = ["libm"]}
cty = "0.2"

lvgl = { path = "../repos/lvgl-rs/lvgl", features =["logger", "lvgl_alloc"] }
lvgl-sys = { path = "../repos/lvgl-rs/lvgl-sys" }
#heapless = "0.5"
#memchr= { version = "2", default-features = false }
cstr_core = "0.2"
#alloc-cortex-m = "0.4"
rtt-target = { version = "0.3", features = ["cortex-m"]}
cortex-m-rtic = "1.0"
systick-monotonic = "1.0"
embedded-time = "0.12"
nb = "1"
#fugit = "0.3"



#[patch.crates-io]
#cortex-m-rt = { path = '../repos/cortex-m/cortex-m-rt' }
#cortex-m = { path = '../repos/cortex-m' }
#alloc-cortex-m = { path = '../repos/alloc-cortex-m' }

[dependencies.gd32f3]
path = "../repos/gd32-rs/gd32f3"
features = ["gd32f307"]

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal.git"
#version = "0.6.1"
features = ["rt", "stm32f107", "medium"]

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.release]
#codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
#lto = true # better optimizations
